examples/test/testpolicy17998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17998
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key24: value14
      key1: value32
      key14: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
          key49: value48
          key1: value15
      podSelector:
        matchLabels:
          key25: value45
